--- a/src/conponent/chattingRoom.module.css
+++ b/src/conponent/chattingRoom.module.css
@@ -1,77 +1,72 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
 
-.sendMessage {
-    width: 40%;
-    height: 40px;
-    background-color: beige;
-    border-radius: 10px;
-    line-height: 40px;
-    text-align: left;
-    padding-left: 10px;
-    font-weight: bold;
-}
-
-.recivMessage {
-    width: 40%;
-    height: 40px;
-    background-color: rgb(119, 192, 176);
-    border-radius: 10px;
-    line-height: 40px;
-    text-align: left;
-    padding-left: 10px;
-    font-weight: bold;
-    color: white;
-}
-
-.sendContainer {
-    width: 100%;
-    display: flex;
-    justify-content: right;
-}
-
-.recivContainer {
-    width: 100%;
-    display: flex;
-    justify-content: left;
-}
-
-.sendDttm {
-    font-size: 0.8rem;
-    margin-right: 5px;
-    color: #aaaaaa;
-    height: 40px;
-    line-height: 65px;
-}
-
-.recivDttm {
-    font-size: 0.8rem;
-    margin-left: 5px;
-    color: #aaaaaa;
-    height: 40px;
-    line-height: 65px;
-}
-
-.hide {
-    display: none;
-}
-
-.column {
+  .box {
+    text-align: center;
     display: flex;
     flex-direction: column;
-    margin: 0px 15px;
-}
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-width: 360px;
+  }
+  
+  .container {
+    width: 95%;
+    height: calc(100vh - 130px);
+    margin-bottom: 5px;
+    overflow-y: auto;
+    margin-top: 55px;
+  }
+  
+  
+  .row {
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #282c3411;
+    height: 70px;
+  }
+  
+  input {
+    width: 40%;
+    min-width: 250px;
+    max-width: 500px;
+    padding-left: 20px;
+    border-radius: 20px;
+    border: 1px solid #aaaaaa;
+    height : 35px;
+  }
+  
+  input:active, input:focus {
+    border: 1px solid gray;
+    outline-color: gray;
+  }
+  
+  .title {
+    position: fixed;
+    height: 35px;
+    width: 100%;
+    line-height: 35px;
+    top: 0px;
+    background-color: white;
+    padding: 10px 0px;
+    box-shadow: 0px 2px 3px -2px #aaaaaa;
+    justify-content: space-between;
+  }
 
-.sendUser {
-    text-align: right;
-    margin-top: 6px;
-    margin-bottom: 3px;
-}
+  .title > div > img {
+    position: absolute;
+    left : 15px;
+    top : 2px;
+    width : 30px;
+    height : 30px;
+  }
 
-.recivUser {
-    text-align: left;
-    margin-top: 6px;
-    margin-bottom: 3px;
-}
+  .title > div {
+    position: relative;
+  }
+
+  .title > p {
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
