--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   font-size: 0.9rem;
+  font-family: 'NanumSquareNeo-Variable';
 }
 
 .App {
@@ -9,19 +10,4 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-
-input {
-  width: 40%;
-  min-width: 250px;
-  max-width: 500px;
-  padding: 0px 20px;
-  border-radius: 20px;
-  border: 1px solid #aaaaaa;
-  height : 35px;
-}
-
-input:active, input:focus {
-  border: 1px solid gray;
-  outline-color: gray;
 }
