--- a/src/conponent/nav.module.css
+++ b/src/conponent/nav.module.css
@@ -10,10 +10,18 @@
     /* background-color: rgb(245, 245, 245); */
 }
 
-.itemLeft {
+.user, .userClk {
     padding-left: 20px;
 }
 
-.itemRight {
+.gearSix, .gearSixClk {
     padding-right: 20px;
+}
+
+.user:hover, .listBullets:hover, .gearSix:hover,.chatsCircle:hover {
+    filter: invert(56%) sepia(89%) saturate(6000%) hue-rotate(158deg) brightness(80%) contrast(313%);
+}
+
+.userClk, .listBulletsClk, .gearSixClk, .chatsCircleClk {
+    filter: invert(56%) sepia(89%) saturate(6054%) hue-rotate(158deg) brightness(97%) contrast(313%);
 }
