--- a/src/conponent/joinModal.module.css
+++ b/src/conponent/joinModal.module.css
@@ -55,7 +55,7 @@
     border: 1px solid #ff2727;
     height : 35px;
     margin: 10px 0px 25px 0px;
-    background-color: #ffe2e2;
+    background-color: #ffeeee;
   }
 
 .sContainer {
