--- a/src/conponent/setting.module.css
+++ b/src/conponent/setting.module.css
@@ -11,18 +11,87 @@
     height: calc(100vh - 140px);
     border-radius: 20px;
     background-color: rgb(240, 240, 240);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .profileImg {
-    width: 160px;
-    height: 160px;
-    border-radius: 30px;
+    width: 27%;
+    min-width: 100px;
+    max-width: 150px;
+    border-radius: 25%;
 }
 
 .subTitle {
     font-size: 1.2rem;
     font-weight: bold;
-    width: 150px;
+    text-align: left;
+    width: 100%;
     height : 50px;
     line-height: 50px;
 }
+
+.sContainer {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modBtn {
+    width: 25%;
+    min-width: 100px;
+    max-width: 200px;
+    margin: 10px 0px;
+}
+
+.start {
+    width: 70%;
+    max-width: 300px;
+    min-width: 200px;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    margin: 20px 0px;
+    align-items: center;
+}
+
+.bold {
+    font-weight: bold;
+    margin-right: 5%;
+}
+
+.switch {
+    width: 50%;
+    height: 50%;
+    max-width: 60px;
+    max-height: 25px;
+    min-width: 50px;
+    min-height: 20px;
+    background-color: rgba(132, 218, 202, 0.4);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 50px;
+    padding: 8px;
+    cursor: pointer;
+  }
+  
+  .switch[data-isOn="true"] {
+    justify-content: flex-end;
+  }
+
+  .handle {
+    width: 25%;
+    height: 25%;
+    max-width: 30px;
+    max-height: 30px;
+    min-width: 20px;
+    min-height: 20px;
+    background-color: rgb(240, 255, 251);
+    border-radius: 40px;
+  }
