--- a/src/conponent/message.module.css
+++ b/src/conponent/message.module.css
@@ -69,12 +69,12 @@
     text-align: right;
     margin-top: 10px;
     margin-bottom: 6px;
-    color: gray;
+    color: dimgray;
 }
 
 .recivUser {
     text-align: left;
     margin-top: 10px;
     margin-bottom: 6px;
-    color: gray;
+    color: dimgray;
 }
