--- a/src/conponent/modModal.module.css
+++ b/src/conponent/modModal.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(120, 120, 120, 0.5);
+    z-index: 1000;
 }
 
 .container {
@@ -34,6 +35,7 @@
     min-width: 100px;
     max-width: 150px;
     border-radius: 25%;
+    border: 2px solid #eeeeee;
 }
 
 .disabled {
